Ajout du workflow pytest.yml

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 ; addopts = -v --alluredir=allure-report
-addopts = -vs -rf --html=report.html --self-contained-html
+; addopts = -vs -rf --html=report.html --self-contained-html
