--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,19 +24,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+
     - name: Test with pytest
       run: |
-        pytest
+        ENV=dev pytest
 
-    - name: Archive Pytest test report
+    - name: Archive Pytest allure test report
       uses: actions/upload-artifact@v4
       with:
-        name: SuperTest-test-report
-        path: report
+        name: Pytest-allure-report
+        path: allure-results
           
-    - name: Upload Pytest report to GitHub
+    - name: Upload Pytest allure report to GitHub
       uses: actions/upload-artifact@v4
       with:
-        name: Pytest-test-report
-        path: report
+        name: Pytest-allure-report
+        path: allure-results  
