--- a/config/prod_config.json
+++ b/config/prod_config.json
@@ -1,1 +1,5 @@
-{ "url": "http://prod.example.com" }
+{
+  "host": "https://jsonplaceholder.typicode.com",
+  "getAPI": "/posts/1",
+  "postAPI":"/posts"
+}
