--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = -v --alluredir=allure-report
+addopts = --alluredir ./allure-results
 ; addopts = -vs -rf --html=report.html --self-contained-html
