--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,15 +28,11 @@ jobs:
     - name: Test with pytest
       run: |
         ENV=dev pytest
-
-    - name: Archive Pytest allure test report
+        
+    - name: Upload Pytest allure report to GitHub
+      if: success() || failure()
       uses: actions/upload-artifact@v4
       with:
         name: Pytest-allure-report
         path: allure-results
-          
-    - name: Upload Pytest allure report to GitHub
-      uses: actions/upload-artifact@v4
-      with:
-        name: Pytest-allure-report
-        path: allure-results  
+        retention-days: 30
